puffier heart tap animation; try hammer.js options touchAction: 'none' and preventDefault: true to force-disable browser scrolling on ios

--- a/assets/styles/custom.less
+++ b/assets/styles/custom.less
@@ -394,9 +394,9 @@ a {
 
                     b {
                         z-index: 1;
-                        height: 100% * @tapScale;
-                        width: 100% * @tapScale;
-                        margin: ( 100% - ( 100 * @tapScale ) ) / 2;
+                        height: 100% * @heartTapScale;
+                        width: 100% * @heartTapScale;
+                        margin: ( 100% - ( 100 * @heartTapScale ) ) / 2;
                     }
 
                     i.loved,
