--- a/assets/styles/keyframes.less
+++ b/assets/styles/keyframes.less
@@ -221,19 +221,19 @@
 }
 
 @-webkit-keyframes triggerTapHeart {
-    0%  { opacity: 1; -webkit-transform: scale( 1 / @tapScale ) translateY( 0 ); }
+    0%  { opacity: 1; -webkit-transform: scale( 1 / @heartTapScale ) translateY( 0 ); }
     100%{ opacity: 0; -webkit-transform: scale( 1 ) translateY( 6% ); }
 }
 @-moz-keyframes triggerTapHeart {
-    0%  { opacity: 1; -moz-transform: scale( 1 / @tapScale ) translateY( 0 ); }
+    0%  { opacity: 1; -moz-transform: scale( 1 / @heartTapScale ) translateY( 0 ); }
     100%{ opacity: 0; -moz-transform: scale( 1 ) translateY( 6% ); }
 }
 @-o-keyframes triggerTapHeart {
-    0%  { opacity: 1; -o-transform: scale( 1 / @tapScale ) translateY( 0 ); }
+    0%  { opacity: 1; -o-transform: scale( 1 / @heartTapScale ) translateY( 0 ); }
     100%{ opacity: 0; -o-transform: scale( 1 ) translateY( 6% ); }
 }
 @keyframes triggerTapHeart {
-    0%  { opacity: 1; transform: scale( 1 / @tapScale ) translateY( 0 ); }
+    0%  { opacity: 1; transform: scale( 1 / @heartTapScale ) translateY( 0 ); }
     100%{ opacity: 0; transform: scale( 1 ) translateY( 6% ); }
 }
 
